--- a/package.json
+++ b/package.json
@@ -2,14 +2,13 @@
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://clantigua2.github.io/NewPortfolioSite",
+  "homepage": "https://clantigua2.github.io/NewPortfolioSite",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.2",
     "@fortawesome/free-brands-svg-icons": "^5.1.0-11",
     "@fortawesome/free-regular-svg-icons": "^5.1.0-11",
     "@fortawesome/free-solid-svg-icons": "^5.1.0-11",
     "@fortawesome/react-fontawesome": "^0.1.2",
-    "gh-pages": "^1.2.0",
     "i": "^0.3.6",
     "npm": "^6.4.0",
     "react": "^16.4.2",
@@ -24,5 +23,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
+  },
+  "devDependencies": {
+    "gh-pages": "^1.2.0"
   }
 }
